--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
         </div>
         <div class="scores">
           <p>Computer : <span id="computer-score">0</span></p>
-          <p>User : <span id="User-score">0</span></p>
+          <p>User : <span id="user-score">0</span></p>
         </div>
       </header>
       <div class="weapons">
         <div class="one">
-          <button>
+          <button onclick="gameChecker('rock')">
             <i class="fas fa-hand-rock"></i>
           </button>
         </div>
         <div class="two">
-          <button>
+          <button onclick="gameChecker('paper')">
             <i class="fas fa-paper-plane"></i>
           </button>
-          <button>
+          <button onclick="gameChecker('scissors')">
             <i class="fas fa-hand-scissors"></i>
           </button>
         </div>
